Minor z-index fix

--- a/public/css/components/_ui.scss
+++ b/public/css/components/_ui.scss
@@ -115,6 +115,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    z-index: 100;
 
     .toast {
         padding: 8px 16px;
